--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@theme-toggles/react": "^4.1.0",
     "clsx": "^2.1.0",
+    "flowbite-react": "^0.8.0",
     "framer-motion": "^11.0.24",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.1.4",
@@ -18,7 +20,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icon": "^1.0.0",
-    "tailwind-merge": "^2.2.2"
+    "tailwind-merge": "^2.2.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -26,8 +29,11 @@
     "@types/react-dom": "^18",
     "@types/react-icons": "^3.0.0",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.10.1",
+    "file-loader": "^6.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "url-loader": "^4.1.1"
   }
 }
