--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "clsx": "^2.1.0",
     "flowbite-react": "^0.8.0",
     "framer-motion": "^11.0.24",
+    "hamburger-react": "^2.5.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icon": "^1.0.0",
+    "react-use-audio-player": "^2.2.0",
     "tailwind-merge": "^2.2.2",
     "zustand": "^4.5.2"
   },
