--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@theme-toggles/react": "^4.1.0",
+    "aos": "^2.3.4",
     "clsx": "^2.1.0",
     "flowbite-react": "^0.8.0",
     "framer-motion": "^11.0.24",
@@ -26,6 +27,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
