--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icon": "^1.0.0",
+    "react-type-animation": "^3.2.0",
     "react-use-audio-player": "^2.2.0",
     "tailwind-merge": "^2.2.2",
     "zustand": "^4.5.2"
